--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">DepedroAssign2</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Open_Nav">Open Navigation Drawer</string>
+    <string name="Close_Nav">Close Navigation Drawer</string>
+
 </resources>
