--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
         <item>https://deih43ym53wif.cloudfront.net/riomaggiore-shutterstock_1195849822_1118a4b73d.jpeg</item>
     </string-array>
 
+    <string-array name="Cities">
+        <item>Toronto</item>
+        <item>Quebec</item>
+        <item>Calgary</item>
+        <item>Vancouver</item>
+    </string-array>
+
 </resources>
