--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,26 @@
 <resources>
     <string name="app_name">DepedroAssign2</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Depedro Hines</string>
     <string name="Open_Nav">Open Navigation Drawer</string>
     <string name="Close_Nav">Close Navigation Drawer</string>
+    <string name="name">Depedro Hines</string>
+    <string name="student">n01455125</string>
+    <string name="initial">Firebase Data</string>
+    <string name="celsius_con">%.2f °C</string>
+    <string name="humidity_con">Humidity: %d%%</string>
+    <string name="longitude_con">Longitude: %.2f</string>
+    <string name="latitude_con">Latitude: %.2f</string>
+    <string name="main_path">main</string>
+    <string name="temp_path">temp</string>
+    <string name="humidity_path">humidity</string>
+    <string name="weather_path">weather</string>
+    <string name="description_path">description</string>
+    <string name="n01455125">n01455125</string>
+    <string name="celsius">Celsius</string>
+    <string name="fahrenheit">Fahrenheit</string>
+    <string name="no_data">NO DATA</string>
+    <string name="pedro">Depedro Hines</string>
+
 
     <string-array name="list">
         <item>Flower</item>
