--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
+<!--
+Name:Depedro Hines
+Section Mobile programming CENG258 ONB
+Student#:n01455125
+-->
+
 <resources>
     <string name="app_name">DepedroAssign2</string>
     <string name="hello_blank_fragment">Depedro Hines</string>
